--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("category.css");
+
 *{
 	margin: 0;
 	padding: 0;
@@ -17,7 +19,7 @@ body{
 }
 
 .container{
-/*	outline: 1px solid red;*/
+	/*outline: 1px solid red;*/
 	width: 1160px;
 	padding: 0 20px;
 	margin: 0 auto;
