--- a/css/category.css
+++ b/css/category.css
@@ -337,3 +337,120 @@
 	color: #7e7e7e;
 	line-height: 20px;
 }
+
+.pagination{
+	width: 100%;
+	margin: 11px 0 46px 0;
+	padding-left: 20px;
+}
+
+.pagination-cont{
+	background-color: #f6f9fc;
+	width: 100%;
+	height: 36px;
+	border-radius: 5px 0 0 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.pagination-cont  span{
+	color: #7e7e7e;
+	font-size: 15px;
+}
+
+.pagination-cont ul{
+	list-style-type: none;
+	display: flex;
+}
+
+.pagination-cont ul li{
+	margin-left: 25px;
+}	
+
+.pagination-cont ul li a{
+	color: #397ce9;
+	font-size: 18px;
+	font-weight: 700;
+}
+
+
+.pagination-cont .pag-link-act{
+	color: #000;
+}
+
+
+.desc-nebulazer{
+	width: 100%;
+	padding: 33px 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+.desc-nebulazer-text{
+	padding-left: 48px;
+	max-width: 800px;
+}
+
+.desc-nebulazer-text p{
+	font-size: 15px;
+}
+
+.desc-nebulazer-text span{
+	color: #397ce9;
+	cursor: pointer;
+}
+
+.review{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-right: 60px;
+}
+
+.review span{
+	font-size: 15px;
+	font-family: 'PT Mono', monospace;
+	font-weight: 700;
+	margin-bottom: 11px;
+}
+
+.review a{
+	display: block;
+	width: 186px;
+	height: 50px;
+	border-radius: 13px;
+	border: 2px solid #397ce9;
+	box-sizing: border-box;
+	text-align: center;
+	line-height: 40px;
+	color: #397ce9;
+	font-weight: 700;
+}
+
+
+/**********************************/
+.manufacturer{
+	display: flex;
+	flex-direction: column;
+}
+
+.manufacturer ul{
+	list-style-type: none;
+}
+
+.manufacturer ul li{
+	outline: 1px solid red;
+/*	display: flex;
+	align-items: center;*/
+}
+
+.manufacturer input{
+	margin-top: 14px;
+	margin-right: 10px;
+	width: 16px;
+	height: 16px;
+	border-radius: 3px;
+	box-sizing: border-box;
+}
