--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ body{
 	margin-left: -20px;
 }
 
+
 .search-box form{
 	width: 362px;
 	height: 42px;
@@ -120,6 +121,8 @@ body{
 	background-color: #fff;
 	border-radius: 7px;
 	box-sizing: border-box;
+	position: relative;
+	/*z-index: 3001;*/
 }
 
 .search-box input[type="text"]{
@@ -127,6 +130,7 @@ body{
 	padding-right: 15px;
 	outline: none;
 	border: none;
+
 }
 
 .search-box input[type="submit"]{
@@ -139,6 +143,102 @@ body{
 	background-image: url("../img/search-logo.png");
 	background-position: center;
 	font-size: 0px;
+}
+
+#result{
+	position: absolute;
+	width: 362px;
+	cursor: pointer;
+	z-index: 1001;
+	/*height: 396px;*/
+	box-sizing: border-box;
+	top: 34px;
+	left: -2px;
+/*	border-right: 1px solid #178eff;
+	border-left: 1px solid #178eff;*/
+	list-style-type: none;
+/*	padding-top: 9px;*/
+/*	margin-top: -5px;*/
+	/*background-color: #fff;*/
+}
+
+#result .result-img{
+/*	outline: 1px solid green;*/
+	width: 25%;
+	display: flex;
+	align-items: center;
+	/*padding-left: 16px;*/
+}
+
+#result li:nth-child(2) .result-img img{
+	margin-left: 10px;
+}
+
+/*#result li:nth-child(3) .result-rblock{
+	padding-right: 12px;
+}
+*/
+#result li {
+/*	outline: 1px solid red;*/
+	padding: 20px 0;
+	background-color: #fff;
+	display: flex;
+	border-right: 1px solid #178eff;
+	border-left: 1px solid #178eff;
+}
+
+#result li:nth-child(1){
+	padding-top: 13px;
+}
+
+#result .result-rblock{
+/*	outline: 1px solid blue;*/
+/*	margin-left: 20px;*/
+	width: 75%;
+}
+
+#result li h2{
+	font-size: 15px;
+	color: #397ce9;
+	margin-bottom: 15px;
+}
+
+#result  span{
+	font-size: 15px;
+	font-weight: 700;
+}
+
+#result .result-price{
+	font-size: 13px;
+	font-weight: 400;
+	color: #7e7e7e;
+	margin-left: 5px;
+}
+
+#result li img{
+/*	outline: 1px solid red;*/
+	margin-left: 16px;
+	/*margin-right: 20px;*/
+	/*margin: 20px;*/
+}
+
+#result li span{
+	font-size: 15px;
+	color: #000000;
+}
+
+.result-but{
+	display: block;
+	width: 100%;
+	height: 30px;
+	line-height: 27px;
+	background-color: #178eff;
+	position: absolute;
+	bottom: -17px;
+	color: #fff;
+	text-align: center;
+	/*border-right: 1px solid #178eff;
+	border-left: 1px solid #178eff;*/
 }
 
 .basket{
@@ -281,22 +381,68 @@ body{
 	height: 264px;
 	width: 96%;
 	border: 1px solid #e5e5e5;
-	background-color: #f6f9fc;	
+	background-color: #f6f9fc;
+	overflow: hidden;	
+}
+
+.slider div{
+	outline: none;
 }
 
 .slider-elem{
+/*	outline: 1px solid blue;*/
 	width: 100%;
-	height: 100%;
+	height: 264px;	
+	/*height: 100%;*/
+/*	background-color: lightpink;*/
 	background-repeat: no-repeat;
 	/*background-size: contain;*/
-	background-position: left;
-	display: flex;
+	/*background-position: left;*/
+	/*display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: flex-end;*/
+	position: relative;
 }
+
+.slick-list .slick-track{
+	width: 100%;
+	/*background-color: red;*/
+}
+
+.slick-dots{
+	display: inline-flex;
+	justify-content: center;
+	position: absolute;
+	right: 50%;
+	top: 236px;
+}
+
+.slick-dots li{
+	display: inline-block;
+	height: 0px;
+}
+
+.slick-dots li button{
+	border-radius: 50%;
+	height: 11px;
+	width: 11px;
+	margin-right: 9px;
+	border: none;
+	background-color: #bdd3f6;
+	outline: none;
+	font-size: 0;
+}
+
+.slick-dots li button[aria-selected="true"]{
+	background-color: #397ce9;
+}
+
 
 .slider-elem-text{
 	width: 408px;
+	position: absolute;
+	top: 86px;
+	right: 100px;
 }
 
 .slider-elem-text h2{
@@ -882,6 +1028,22 @@ footer{
 	.delimiter{
 		display: none;
 	}
+
+	.slider-elem{
+		background-position: -150px;
+	}
+
+	.slider-elem-text{
+		right: 10px;
+		left: 10px;
+		top: 50px;
+		/*margin: 0 auto;*/
+		width: 100%;
+	}
+
+	.slider-elem-text p{
+		display: none;
+	}
 }
 
 @media only screen and (max-width: 544px){
@@ -975,6 +1137,10 @@ footer{
 
 @media only screen and (max-width: 390px){
 	.search-box form{
+		width: 300px;
+	}
+
+	#result{
 		width: 300px;
 	}
 
