--- a/css/category.css
+++ b/css/category.css
@@ -1,12 +1,12 @@
 @import url("style.css");
 
 .container{
-	outline: 1px solid pink;
+	/*outline: 1px solid pink;*/
 }
 
 .category{
 	display: flex;
-	outline: 1px solid blue;
+	/*outline: 1px solid blue;*/
 	margin-top: -18px;
 	width: 100%;
 }
@@ -30,7 +30,7 @@
 }
 
 .list-block{
-	outline: 1px solid green;
+	/*outline: 1px solid green;*/
 	width: 100%;
 /*	padding-left: 20px;*/
 	background-color: #ffffff;
@@ -518,39 +518,56 @@
 }
 
 .popup-bottom{
-	width: 100%;
-	/*display: flex;*/
+	max-width: 702px;
+	display: flex;
 	/*flex-direction: column;*/
+	justify-content: space-between;
+	align-items: center;
 	padding-top: 20px;
 	padding-left: 30px;
 	padding-right: 30px;
-	/*align-items: center;
-	justify-content: center;*/
+	/*background-color: gray;*/
+	/*display:block;
+  	margin:0 auto;*/
+  	font-family:Arial;
 }
 
-/*.popup-bottom .slick-slide{
-	outline: 1px solid red;
+.popup-slider-nav div{
+	width: 646px;
+	height: 226px;
+	/*margin-right: 50px;*/
+}
+
+.popup-slider .slick-track{
 	width: 100%;
-}*/
-
-.popup .product-centre-elem{
-	outline: 1px solid red;
-	width: 175px;
-	position: relative;
 }
 
-
-.popup-bottom .prod-img{
-	width: 100px;
-	height: 90px;
-	background-size: 100%;
+.popup-slide img{
+	width: 120px;
+	height: 100px;
 }
 
-.popup-bottom .product-centre-elem{
-	/*outline: 1px solid blue;*/
-	position: relative;
-	padding: 0;
-	width: 190px;
+.popup-slide .rating-box{
+	display: flex;
+	margin-top: 10px;
+	width: 110px;
+	height: 30px;
+}
+
+.popup-slide .rating-box div{
+	height: 20px;
+}
+
+.popup-slide .rating-box-elem i{
+	color: #e1e1e1;
+}
+
+.popup-slide .rating-box-elem .rat-active{
+	color: #ffc867;
+}
+
+.popup-slide .rating-box-elem{
+	margin: 4px;
 }
 
 .popup-button-buy{
@@ -559,13 +576,20 @@
 	background-color: #54be54;
 	border-radius: 11px;
 	display: inline-block;
-	position: absolute;
+	margin-top: 5px;
+	margin-left: 80px;
+	/*position: absolute;
 	right: 25px;
-	bottom: -15px;
-	cursor: pointer;
+*/	cursor: pointer;
 	background-image: url('../img/buy-logo.png');
 	background-repeat: no-repeat;
 	background-position: center;
+}
+
+.popup-slide .product-price{
+	display: inline-block;
+	vertical-align: top;
+	margin-top: 15px;
 }
 
 
