--- a/css/category-tile.css
+++ b/css/category-tile.css
@@ -53,6 +53,11 @@
 	font-size: 15px;
 }
 
+.tile-block-elem label{
+	color: #7e7e7e;
+	font-size: 15px;
+}
+
 
 .tile-block-elem select{
 	color: #7e7e7e;
@@ -68,6 +73,7 @@
  	 background-repeat: no-repeat;
  	 background-position: 95% 50%;
  	 padding-left: 10px;
+ 	 margin-top: 6px;
 }
 
 
